<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tipcalculator.MainActivity">

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="33dp"
        android:text="Tip:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/totalAmountLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentLabel"
        app:layout_constraintVertical_bias="0.369"
        tools:text="@string/tipLabel" />

    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="16dp"
        android:text="Bill Amount:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/billAmount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/bilAmountLabel" />

    <EditText
        android:id="@+id/billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|numberDecimal"
        tools:text="@string/billAmount"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/totalAmount"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintLeft_toRightOf="@+id/tipLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPercent"
        tools:text="@string/tipTotal" />

    <TextView
        android:id="@+id/tipPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="59dp"
        android:text="Percent:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmountLabel"
        tools:text="@string/percentLabel" />

    <TextView
        android:id="@+id/tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/percent"
        app:layout_constraintLeft_toRightOf="@+id/tipPercentLabel"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="93dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addPercent"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="31dp"
        android:text="+"
        app:layout_constraintLeft_toRightOf="@+id/tipPercent"
        app:layout_constraintTop_toBottomOf="@+id/billAmount"
        tools:text="@string/addPercent" />

    <Button
        android:id="@+id/minusPercent"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="31dp"
        android:text="-"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toRightOf="@+id/addPercent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmount"
        tools:text="@string/minusPercent" />

    <TextView
        android:id="@+id/totalAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="243dp"
        android:layout_marginLeft="16dp"
        android:text="Total:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/totalLabel" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/totalAmountLabel"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/total" />

</android.support.constraint.ConstraintLayout>
